refactor: rewrite some code for java 8 compatibility